--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "react + typescript setup by Koy (2022)",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --open --hot",
+    "start": "webpack serve",
     "build": "webpack"
   },
   "repository": {
