--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "react + typescript setup by Koy (2022)",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve",
-    "build": "webpack"
+    "start": "NODE_ENV=development webpack serve",
+    "build": "NODE_ENV=production webpack"
   },
   "repository": {
     "type": "git",
